v1.0.1
changes some stuff and fixes total rei entries in a collapsed rei entry showing at the wrong index in entry tooltip